--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alibi==0.9.6
 annotated-types==0.7.0
 attrs==23.2.0
 blinker==1.9.0
+blis==0.7.11
 catalogue==2.0.10
 certifi==2025.6.15
 charset-normalizer==3.4.2
@@ -16,6 +17,7 @@ filelock==3.18.0
 Flask==3.1.1
 fonttools==4.58.4
 fsspec==2025.5.1
+gunicorn==23.0.0
 hf-xet==1.1.5
 huggingface-hub==0.33.1
 idna==3.10
